update codehighlight;add analystics

--- a/_posts/2020-05-01-test.md
+++ b/_posts/2020-05-01-test.md
@@ -6,3 +6,9 @@ category: blog
 ---
 ### 测试
 [Mouleon](http://mouleon.com)   
+```
+public static void readFileByBytes(String fileName) {
+        File file = new File(fileName);
+        InputStream in = null;
+        StringBuffer sb = new StringBuffer();
+```
