--- a/_posts/2020-05-01-test.md
+++ b/_posts/2020-05-01-test.md
@@ -12,3 +12,6 @@ public static void readFileByBytes(String fileName) {
         InputStream in = null;
         StringBuffer sb = new StringBuffer();
 ```
+![以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)](https://cn.bing.com//th?id=OHR.BaliRiceHarvest_ZH-CN9267319542_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp "以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)")<center>以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)</center>  
+![以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)](https://cn.bing.com//th?id=OHR.BaliRiceHarvest_ZH-CN9267319542_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp "以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)")<center>以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)</center>  
+![以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)](https://cn.bing.com//th?id=OHR.BaliRiceHarvest_ZH-CN9267319542_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp "以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)")<center>以阿贡火山为背景Sidemen山谷中的稻田，印度尼西亚巴厘岛 (© Jon Arnold/Danita Delimont)</center>  
