--- a/_posts/2020-05-20-set-ssl.md
+++ b/_posts/2020-05-20-set-ssl.md
@@ -52,8 +52,8 @@ server {
     location / {
         # todo
     }
-    ssl_certificate ssl/congm.in.cer;
-    ssl_certificate_key ssl/congm.in.key
+    ssl_certificate ssl/mouleon.com.cer;
+    ssl_certificate_key ssl/mouleon.com.key
 }
 server {
     listen 80;
