--- a/_posts/2020-05-25-regex.md
+++ b/_posts/2020-05-25-regex.md
@@ -2,7 +2,7 @@
 layout: post
 title: 正则表达式语法
 description: 正则表达式语法
-category: blog
+category: [正则表达式]
 ---
 
 ## 什么是正则表达式？
@@ -15,13 +15,9 @@ category: blog
 
 想象你正在写一个应用，然后你想设定一个用户命名的规则，让用户名包含字符、数字、下划线和连字符，以及限制字符的个数，好让名字看起来没那么丑。
 我们使用以下正则表达式来验证一个用户名：
-
-<br/><br/>
-
 <p align="center">
   <img src="images/posts/regexp-cn.png" alt="Regular expression">
 </p>
-
 以上的正则表达式可以接受 `john_doe`、`jo-hn_doe`、`john12_as`。
 但不匹配`Jo`，因为它包含了大写的字母而且太短了。
 
