--- a/_posts/2020-05-07-site.md
+++ b/_posts/2020-05-07-site.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: markdown测试文档
+title: 站点风格
 description: markdown测试
-category: [markdown]
+category: [Markdown,建站]
 ---
-markdown测试文档  
+站点风格  
 ## 分级标题
 ```
 ## 二级
@@ -50,8 +50,22 @@ markdown测试文档
 
 ## 表格  
 
-
 | Header One     | Header Two     | Header Three   |
 | :------------- | :------------- | :------------- |
 | Item One       | Item Two       | Item Three     |
 | Item One       | Item Two       | Item Three     |
+
+## 代码
+```
+#!/usr/bin/python
+# -*- coding: utf-8 -*-
+import requests
+import json
+
+def write_md(image_name,desc):
+    data='![{}]({} "{}  ")'.format(desc,image_name,desc)
+    data+='<center>'+desc+'</center>  '
+    fout = open("wallpaper/README.md",'a+',encoding="UTF-8")
+    fout.write(data)
+    fout.close()
+```
