--- a/_posts/2020-05-20-set-ssl.md
+++ b/_posts/2020-05-20-set-ssl.md
@@ -2,7 +2,7 @@
 layout: post
 title: Let's Encrypt泛域名SSL证书申请及自动续签
 description: Let's Encrypt泛域名SSL证书申请及自动续签
-category: blog
+category: 建站
 ---
 Let's Encrypt: https://letsencrypt.org , 是一个免费的、自动化的、开放的证书颁发机构。  
 Let's Encrypt证书申请单个域名证书比较简单，但泛域名申请流程比较复杂  
