--- a/_posts/2020-06-02-opencv4-use.md
+++ b/_posts/2020-06-02-opencv4-use.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: opencv4的配置和使用
-description: opencv4的配置和使用
-category: [C++,opencv]
+title: OpenCV 4 的配置和使用
+description: OpenCV 4 的配置和使用
+category: [C++,OpenCV]
 ---
 OpenCV 是英特尔开源的跨平台计算机视觉库。也就是说，它是一套包含从图像预处理到预训练模型调用等大量视觉 API 的库，并可以处理图像识别、目标检测、图像分割和行人再识别等主流视觉任务。  
 opencv4 的主要更新如下
@@ -28,8 +28,9 @@ Branch 3.4 will be switched to maintanence mode: only bugfixes and light feature
 * vs项目属性-C/C++-附加包含目录，添加`opencv目录/build/include`
 * 属性-链接器-常规-附加库目录，添加`opencv目录/build/x64/vc14/lib`
 * 属性-链接器-输入-附加依赖项，添加`opencv_world430.lib`
-* 将`opencv目录\build\x64\vc14\bin`下的`opencv_world430.dll`放入exe目录
-debug版本就是将原来lib和dll换成带`d`后缀的lib和dll  
+* 将`opencv目录\build\x64\vc14\bin`下的`opencv_world430.dll`放入exe目录  
+debug版本就是将原来lib和dll换成带`d`后缀的lib和dll    
+
 ## 测试
 ```
 #include <opencv2\opencv.hpp>
