--- a/404.md
+++ b/404.md
@@ -1,8 +1,13 @@
 ---
-layout: post
-title:
+layout: 404
 ---
-
-
-啊哦，页面找不到了    
+**404**
+<br/>
+<br/>
+啊哦，页面找不到了  
 ╮(๑•́ ₃•̀๑)╭
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
