--- a/_posts/2020-05-07-site.md
+++ b/_posts/2020-05-07-site.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: 站点风格
-description: markdown测试
-category: [Markdown,建站]
+description: 站点风格
+category: [建站]
 ---
-初始模板来源于[beiyuu.com](beiyuu.com)，但是过于简洁了，所以添加了导航、目录、页脚，改了首页样式，修改了配色，风格如下： 
+初始模板来源于[beiyuu.com](http://beiyuu.com)，但是过于简洁了，所以添加了导航、目录、页脚，改了首页样式，修改了配色，风格如下： 
 ## 分级标题
 ```
 ## 二级
