--- a/_posts/2020-05-27-C++-Primer-ch6.md
+++ b/_posts/2020-05-27-C++-Primer-ch6.md
@@ -150,7 +150,7 @@ int main(int argc,char *argv[]){...}
 ```
 **注意 argv[0]保存的是程序的名字，并非用户输入**
 ### 6.2.6 含有可变形参的函数
-有时我们无法提前预知应该像函数传递几个实参，参见[可变形参模板](/C++-Primer-ch16)  
+有时我们无法提前预知应该像函数传递几个实参，参见[可变形参模板](/C++-Primer-ch16.html)  
 * 省略符形参
 省略符形参是为了便于和C代码而设置的，使用了`varargs`的C标准库功能。省略符不应用于其他目的。省略符形参只能出现在形参列表的最后一个位置，如
 
