--- a/_posts/2020-08-07-cpp-sqlite3.md
+++ b/_posts/2020-08-07-cpp-sqlite3.md
@@ -2,7 +2,7 @@
 layout: post
 title: sqlite3在C++中的基础使用
 description: sqlite3在C++中的基础使用
-category: [技巧]
+category: [C++,数据库]
 ---
 sqlite 是一个轻量级的关系数据库，使用方便，占用小，不必复杂的安装  
 ## 下载
@@ -22,7 +22,7 @@ sqlite>
 ## C++ 使用
 为了方便使用，我们在vs工程 `属性-链接器-输入-附加依赖项`，添加`sqlite3.lib`，如果下载的包里面没有sqlite3.lib，就只能自己编译：  
 * 新建win32工程，选择dll，然后将源代码包里面的 `sqlite3.h`、`sqlite3.c`、`sqlite3ext.h`添加到工程，然后在`属性-C/C++-代码生成`，修改为多线程(release)或者多线程调试(debug)，`预编译头`改为不使用，然后编译
-* 编译成功后，打开vs命令行，如`Visual Studio 2019 Developer Command Prompt v16.6.4`(开始菜单-所有程序 里面应该有)，进入`sqlite3.obj`文件夹,输入`LIB sqlite3.obj`生成`sqlite3.lib`  
+* 编译成功后，打开vs命令行，如`Visual Studio 2019 Developer Command Prompt v16.6.4`(开始菜单-所有程序 里面应该有)，进入`sqlite3.obj`文件夹,输入`LIB sqlite3.obj`生成`sqlite3.lib`(3M 左右，60k大小的是有问题的)  
 
 将`sqlite3,lib`放进工程里，`sqlite3.dll`放入exe文件夹  
 然后在代码中使用，如：
