--- a/_posts/2020-07-01-bing-api.md
+++ b/_posts/2020-07-01-bing-api.md
@@ -6,9 +6,9 @@ category: [API]
 ---
 ## 每日壁纸API
 必应首页的壁纸比较好看，可以当作网站或者博客的背景图，但是要是静态网站或者博客每天换就有一些麻烦了，直接在js里面获取必应壁纸地址会出现跨域问题，无法使用，所以就写了一个服务放在服务器上，直接引用地址即可使用   
-壁纸地址：[https://www.oneneko.com/bing](https://www.oneneko.com/bing)  
+壁纸地址：[https://api.oneneko.com/bing](https://api.oneneko.com/bing)  
 使用示例： 
 ```
-background-image: url(https://www.oneNeko.com/bing);
+background-image: url(https://api.oneNeko.com/bing);
 ```
-注：在head里面可以加入`<link rel="dns-prefetch" href="https://www.oneneko.com">`加快DNS的解析，提升加载速度
+注：在head里面可以加入`<link rel="dns-prefetch" href="https://api.oneneko.com">`加快DNS的解析，提升加载速度
